# ChangeLog for gnome-base/gnome
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.112 2004/07/01 13:18:57 agriffis Exp $

  01 Jul 2004; Aron Griffis <agriffis@gentoo.org> gnome-2.6.ebuild:
  add ~alpha

  04 Jun 2004; Stephen P. Becker <geoman@gentoo.org> gnome-2.6.1_p1.ebuild,
  gnome-2.6.1_rc1.ebuild, gnome-2.6.ebuild:
  2.6 stable on mips, 2.6.1 testing

  03 Jun 2004; Stephen P. Becker <geoman@gentoo.org> gnome-2.4.2.ebuild,
  gnome-2.6.ebuild:
  Do not build epiphany on mips because mozilla is broken.

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> gnome-2.6.ebuild:
  Masked gnome-2.6.ebuild stable for ppc

  26 May 2004; Guy Martin <gmsoft@gentoo.org> gnome-2.6.1_p1.ebuild,
  gnome-2.6.ebuild:
  Removed epiphany from DEPEND for hppa. Added hppa and ~hppa to KEYWORDS.

*gnome-2.6.1_p1 (21 May 2004)

  21 May 2004; foser <foser@gentoo.org> gnome-2.6.1_p1.ebuild :
  New update tracker

*gnome-2.6.1_rc1 (21 May 2004)

  21 May 2004; foser <foser@gentoo.org> gnome-2.6.1_rc1.ebuild :
  New meta for 2.6.1 release

  15 May 2004; Stephen P. Becker <geoman@gentoo.org> gnome-2.4.2.ebuild:
  Stable on mips.

*gnome-2.6_p1 (20 Apr 2004)

  20 Apr 2004; foser <foser@gentoo.org> gnome-2.6_p1.ebuild :
  update tracker for the gnome team
  2.6.* : fix typo in postinst note : fam -> famd (#48340)

  17 Apr 2004; Travis Tilley <lv@gentoo.org> gnome-2.4.2.ebuild:
  stable on amd64

*gnome-2.6 (05 Apr 2004)

  05 Apr 2004; foser <foser@gentoo.org> gnome-2.6.ebuild :
  Add changelog entry for 2.6 release

*gnome-2.6_rc5 (01 Apr 2004)

  01 Apr 2004; foser <foser@gentoo.org> gnome-2.5_rc5.ebuild :
  New rc, this is really gnome 2.6 final

*gnome-2.6_rc4 (30 Mar 2004)

  30 Mar 2004; Travis Tilley <lv@gentoo.org> gnome-2.6_rc4.ebuild:
  added ~amd64 keyword

*gnome-2.6_rc3 (23 Mar 2004)

  23 Mar 2004; L. Boshell <leonardop@gentoo.org> gnome-2.6_rc3.ebuild: