@@ -1,10 +1,10 @@
-MD5 a9c5126750993d603df24ee3f5fee2df gnome-2.6.1_rc1.ebuild 3921
+MD5 115e5aaba1bfebe744d7215f22c9c698 gnome-2.6.1_rc1.ebuild 3928
 MD5 3f3f99e5b3f98e8c265f4686b5b24471 gnome-2.6.ebuild 3774
 MD5 4a793c49a9535af131de298f1df6527a gnome-1.4-r3.ebuild 539
-MD5 1d6d16e4fe6d755bc2204cbd0df6f28e ChangeLog 16653
+MD5 00b293fe9f84a697bfa83983e6005c9e ChangeLog 16766
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 ad1e1e763b44c1c01580dff6e3b6df83 gnome-2.4.2.ebuild 3749
-MD5 89a2b5d51f665f6b14bf5ca1959c9092 gnome-2.6.1_p1.ebuild 3930
+MD5 1b21e766210f7a2d79d47eee6a6dc884 gnome-2.6.1_p1.ebuild 3936
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.4.2 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.6.1_rc1 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.6 0
