@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/gnome-2.6.1_rc1.ebuild,v 1.3 2004/06/24 21:55:51 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/gnome-2.6.1_rc1.ebuild,v 1.4 2004/07/01 21:14:56 agriffis Exp $
 
 # UPDATE TRACKER : GNOME TEAM ONLY
 
@@ -13,7 +13,7 @@ SLOT="2.0"
 IUSE="cdr dvdr doc accessibility"
 # when unmasking for an arch
 # double check none of the deps are still masked !
-KEYWORDS="~x86 ~ppc ~sparc ~amd64 ~mips"
+KEYWORDS="~x86 ~ppc ~sparc ~amd64 ~mips ~alpha"
 
 #  Note to developers:
 #  This is a wrapper for the complete Gnome2 desktop,
