@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.112 2004/07/01 13:18:57 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.113 2004/07/01 21:14:56 agriffis Exp $
+
+  01 Jul 2004; Aron Griffis <agriffis@gentoo.org> gnome-2.6.1_p1.ebuild,
+  gnome-2.6.1_rc1.ebuild:
+  add ~alpha
 
   01 Jul 2004; Aron Griffis <agriffis@gentoo.org> gnome-2.6.ebuild:
   add ~alpha
